Fix weird input button styling on iOS

--- a/src/components/home/NewsletterSignupForm.css
+++ b/src/components/home/NewsletterSignupForm.css
@@ -1,3 +1,8 @@
+/* Fix weird input button styling on iOS */
+input {
+  appearance: none;
+}
+
 .newsletter {
   display: flex;
   flex-direction: column;
